# nEMESysLab-FWS

./: README.md  TODO.md
FWS_client/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.3fc383a  FWS_client.files  Makefile  appointmentsview.cpp  cmake_install.cmake  filelist.h  filescontroller.cpp  filesmodel.cpp  filesmodel.h  loginwindow.cpp  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
FWS_client/src/: appointmentsmodel.cpp  appointmentsmodel.h  appointmentsview.cpp  appointmentsview.h  appointmentsview.ui  connectionwidget.cpp  connectionwidget.h  connectionwidget.ui  filelist.cpp  filelist.h  filescontroller.h  filesmodel.cpp  filesmodel.h  filetransfer.cpp  filetransfer.h  loginwindow.cpp  loginwindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serverconnection.cpp  serverconnection.h
FWS_client/src/DTO/: appointmentdto.h  appointmentlistdto.h  commanddto.h  credentialsdto.h  dtointerface.h  fileslistdto.h
FWS_client/src/Mediator/: basecomponent.h  mediatorinterface.h  serverconnectionmediator.cpp  serverconnectionmediator.h
FWS_server/: CMakeCache.txt  CMakeLists.txt  FWS_server  FWS_server.files  FWS_server.pro  Makefile  README.md  cmake_install.cmake  main.cpp
FWS_server/FWS_server_autogen/: moc_predefs.h
FWS_server/database_config/: create_tables.sql  initial_insertions.sql
FWS_server/src/: databaseconnector.cpp  databaseconnector.h  databaseconnector.hpp  filesystemcontroller.cpp  filesystemcontroller.h  filesystemcontroller.hpp  main.cpp  serverhandler.cpp  serverhandler.hpp
FWS_server/src/commands/: command.hpp  dbLoginCommand.cpp  dbLoginCommand.hpp  fpgaGenerateProgrammingFileCommand.cpp  fpgaGenerateProgrammingFileCommand.hpp  fpgaImplementDesignCommand.cpp  fpgaImplementDesignCommand.hpp  fpgaRebuildProjectCommand.cpp  fpgaRebuildProjectCommand.hpp  fpgaResetFilesCommand.cpp  fpgaResetFilesCommand.hpp  fpgaSynthesizeDesignCommand.cpp  fpgaSynthesizeDesignCommand.hpp
FWS_server/src/fpga/: fpga.cpp  fpga.hpp  fpgaabstract.hpp  fpgaempty.cpp  fpgaempty.hpp  fpgapool.cpp  fpgapool.hpp
build-FWS_client-Clone_of_Desktop_Qt_5_15_0_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  FWS_client  build.ninja  cmake_install.cmake
build-FWS_client-Clone_of_Desktop_Qt_5_15_0_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-09756e667b197b5c387d.json  cmakeFiles-v1-3c72c140abebd997cb5b.json  codemodel-v2-a98120be4fcb0c4f14e7.json  index-2021-01-08T02-57-36-0427.json  target-FWS_client-Debug-7d298f1eb0bc1939f015.json  target-FWS_client_autogen-Debug-f008a8dd316e35060814.json  target-FWS_client_autogen_timestamp_deps-Debug-d313e6a93f5f6eee3432.json
build-FWS_client-Clone_of_Desktop_Qt_5_15_0_GCC_64bit-Debug/FWS_client_autogen/: deps  mocs_compilation.cpp
build-FWS_client-Clone_of_Desktop_Qt_5_15_0_GCC_64bit-Debug/FWS_client_autogen/UVLADIE3JM/: moc_appointmentsview.cpp  moc_filelist.cpp  moc_loginwindow.cpp  moc_mainwindow.cpp
build-FWS_client-Clone_of_Desktop_Qt_5_15_0_GCC_64bit-Debug/FWS_client_autogen/include/: ui_appointmentsview.h  ui_loginwindow.h  ui_mainwindow.h
build-FWS_client-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  FWS_client  build.ninja  cmake_install.cmake
build-FWS_client-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-1653927f144ac805e298.json  cmakeFiles-v1-2a2036a4618160a27bf9.json  cmakeFiles-v1-5041ffdcf090efdc7498.json  codemodel-v2-69fe8cedb8b83a3d3bca.json  codemodel-v2-966c94b2463edb14eca3.json  codemodel-v2-bccf0f02864b28463992.json  index-2021-01-06T07-55-33-0469.json  index-2021-01-06T15-09-08-0144.json  index-2021-01-08T00-38-37-0345.json  target-FWS_client-Debug-37a2caa6582c241ff9e2.json  target-FWS_client-Debug-47bf1558877daffa69a4.json  target-FWS_client-Debug-7d529cbd3c7fef44f33f.json  target-FWS_client_autogen-Debug-47d667fb4edabdea05ee.json  target-FWS_client_autogen_timestamp_deps-Debug-90e4e8171166ab6904f6.json
build-FWS_client-Desktop-Debug/FWS_client_autogen/: deps
build-FWS_client-Desktop-Debug/FWS_client_autogen/EWIEGA46WW/: moc_mainwindow.cpp
build-FWS_client-Desktop-Debug/FWS_client_autogen/UVLADIE3JM/: moc_appointmentsview.cpp  moc_filelist.cpp  moc_loginwindow.cpp  moc_mainwindow.cpp
build-FWS_client-Desktop-Debug/FWS_client_autogen/include/: ui_appointmentsview.h  ui_loginwindow.h  ui_mainwindow.h
build-FWS_server-Desktop-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  FWS_server  Makefile  build.ninja  cmake_install.cmake
build-FWS_server-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-9ba4f4534dfb04c1ba06.json  cmakeFiles-v1-53d9e4f20bb3689f3262.json  cmakeFiles-v1-b6fe7ce9c81c0eac7121.json  codemodel-v2-6b1e2c51667627961a0f.json  codemodel-v2-c97ae91324dc5b0b94d2.json  index-2021-01-06T07-54-59-0868.json  index-2021-01-06T18-32-45-0757.json  target-FWS_server-Debug-c4319cbb2f48b2422ed3.json  target-FWS_server-Debug-e0ce1694e48854e627b2.json  target-FWS_server_autogen-Debug-fc0bb108b975ec6ec069.json  target-FWS_server_autogen_timestamp_deps-Debug-3f90818f15778becc2c5.json
build-FWS_server-Desktop-Debug/FWS_server_autogen/: deps  moc_predefs.h
